--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,12 @@
 @use './partials/fonts';
 
 *, *::before, *::after {
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 html {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: #2e2e2e;
 }
