--- a/src/components/PageNav/PageNav.scss
+++ b/src/components/PageNav/PageNav.scss
@@ -3,11 +3,11 @@
 
 .header{
     display: flex;
-    // justify-content: space-between;
     align-items: center;
     padding: 1rem .5rem;
     width: 100%;
     border-bottom: 1px solid rgba($color: #000000, $alpha: .1);
+    background-color: $primary-one;
 
     &__nav{
 
@@ -15,6 +15,28 @@
             width: 20px;
             margin-left: .5rem;
             margin-right: 2rem;
+
+            &--close{
+                @extend .header__nav-burger;
+                width: 20px;
+            }
+        }
+
+        &-open{
+            height: fit-content;
+            background-color: rgb(242, 242, 242);
+            margin: 0;
+            padding: 0;
+            position: absolute;
+            top: 3.5rem;
+            z-index: 20;
+            width: 100%;
+        }
+
+        &-listitem{
+            list-style: none;
+            padding: 1.5rem 1rem;
+            border-bottom: 1px solid rgba($color: #000000, $alpha: .1);
         }
 
     }
