--- a/src/partials/_fonts.scss
+++ b/src/partials/_fonts.scss
@@ -1,4 +1,36 @@
+@use "./variables" as *;
+
+@font-face {
+    font-family: SegoeProBlack;
+    src: url(../assets/fonts/SegoePro-Black.woff);
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: SegoeProBlack;
+    src: url(../assets/fonts/SegoePro-Regular.woff);
+    font-weight: 300;
+}
+
+h1 {
+    font-family: SegoeProBlack, sans-serif;
+    margin: 0;
+}
+
+p {
+    font-family: SegoeProBlack, sans-serif;
+    font-weight: 300;
+}
 
 span {
     font-size: 13px;
+}
+
+li {
+    font-family: sans-serif;
+    color: $link-dark;
+}
+button {
+    font-family: SegoeProBlack, sans-serif;
+    font-weight: 600;
 }
