--- a/src/components/PageNav/PageNav.scss
+++ b/src/components/PageNav/PageNav.scss
@@ -47,6 +47,11 @@
         justify-content: space-between;
         align-items: flex-end;
         width: 100%;
+
+        & span {
+            font-weight: 300;
+            color: $primary-three;
+        }
     }
 
     &__search{
@@ -60,7 +65,7 @@
     }
 
     &__cart{
-        width: 21.5px;
+        width: 22.5px;
         height: 19px;
     }
 }
