--- a/src/components/PageContent/PageContent.scss
+++ b/src/components/PageContent/PageContent.scss
@@ -147,6 +147,12 @@
             &--p2 {
                 margin: 0;
             }
+            
+            &:last-child{
+                margin-bottom: 0;
+            }
         }
+        
     }
+
 }
