--- a/src/components/PageContent/PageContent.scss
+++ b/src/components/PageContent/PageContent.scss
@@ -20,6 +20,11 @@
             align-items: center;
             margin-bottom: 2rem;
             cursor: pointer;
+
+            @include tablet{
+                width: 16.6%;
+                margin: 0;
+            }
         }
 
         &-image {
@@ -33,14 +38,31 @@
 
     &__cards {
         background-color: $primary-one;
+
         &-card {
             padding: 0 6px;
             position: relative;
             margin-bottom: 6px;
             height: 30rem;
 
+            @include tablet{
+                height: fit-content;
+            }
+
             &--white {
                 height: 35rem;
+
+                @include tablet{
+                    height: fit-content;
+                }
+
+                & p {
+                    @include tablet{
+                        font-size: 26px;  
+                        width: 75%;
+                        padding: 1.5rem 0 1rem 0;  
+                    }
+                }
 
                 &-fortnite {
                     & button {
@@ -50,6 +72,18 @@
                             color: $primary-three;
                             animation: bottomBorderContentFN 0.2s linear;
                             animation-fill-mode: forwards;
+                        }
+                    }
+
+                    & h2 {
+                        @include tablet{
+                            font-size: 2.25rem;
+                        }
+                    }
+
+                    & p {
+                        @include tablet{
+                            font-size: 1.25rem;   
                         }
                     }
                 }
@@ -72,13 +106,33 @@
                 justify-content: center;
                 align-items: flex-start;
 
+                @include tablet{
+                    padding-left: 1rem;
+                    padding-top: 0;
+                    padding: 0 0 6rem 1rem;
+                }
+
                 & h2,
                 p {
                     padding-left: 6px;
+
+                    @include tablet{
+                     margin-left: 1rem;
+                    }
+                }
+
+                & button {
+                    @include tablet{
+                        padding-left: 0;       
+                    }
                 }
 
                 &--grey {
                     background-color: #2e2e2e;
+
+                    @include tablet{
+                        background: none;
+                    }
 
                     & h2 {
                         margin-bottom: 0.5rem;
@@ -87,6 +141,7 @@
 
                     & p {
                         margin-bottom: 0;
+                        font-size: 1.25rem;
                     }
                 }
 
@@ -94,9 +149,28 @@
                     background-color: $primary-two;
                     height: 17.25rem;
 
+                    @include tablet{
+                        position: relative;
+                        width: 100%;
+                        padding: 2rem 1rem;
+                        height: fit-content;
+                        bottom: 3px;
+                    }
+
                     & h2 {
                         margin-bottom: 0.5rem;
                         margin-top: 0;
+
+                        @include tablet{
+                            font-size: 2.13rem;
+                        }
+                    }
+
+                    & p{
+                        @include tablet{
+                            font-size: 1.25rem;
+                            padding-right: 1rem;
+                        }
                     }
                 }
 
@@ -106,11 +180,26 @@
                     padding-top: 8rem;
                     height: 25rem;
 
+                    @include tablet{
+                        position: relative;
+                        width: 100%;
+                        padding: 2rem 1rem;
+                        height: fit-content;
+                        bottom: 3px;
+                        padding-top: 3rem;
+                    }
+
                     &--title {
                         font-size: 3rem;
                         margin: 0;
                         width: 16rem;
                         line-height: 3rem;
+
+                        @include tablet{
+                         font-size: 3.875rem;   
+                         width: fit-content;
+                         margin-bottom: .5rem;
+                        }
                     }
 
                     &--span {
@@ -121,6 +210,12 @@
                         margin-top: 1rem;
                         margin-left: 0.75rem;
                         color: $secondary-two;
+
+                        @include tablet{
+                            padding-left: .5rem;
+                            font-size: 1px;
+                            margin-left: 1.75rem;
+                        }
                     }
                 }
             }
@@ -141,6 +236,7 @@
 
                 &-container {
                     margin-top: 1.5rem;
+                    margin-left: 1.5rem;
                 }
             }
 
