--- a/src/components/PageContent/PageContent.scss
+++ b/src/components/PageContent/PageContent.scss
@@ -13,6 +13,11 @@
         width: 100%;
         padding: 2rem 0.5rem;
 
+        @include desktop {
+            width: 75%;
+            margin: 0 auto;
+        }
+
         &-container {
             width: 33.3%;
             display: flex;
@@ -21,7 +26,7 @@
             margin-bottom: 2rem;
             cursor: pointer;
 
-            @include tablet{
+            @include tablet {
                 width: 16.6%;
                 margin: 0;
             }
@@ -29,6 +34,10 @@
 
         &-image {
             width: 54px;
+
+            @include desktop {
+                width: 75px;
+            }
         }
 
         &-title {
@@ -36,8 +45,14 @@
         }
     }
 
+    //Content Cards
+
     &__cards {
         background-color: $primary-one;
+
+        @include desktop {
+            display: none;
+        }
 
         &-card {
             padding: 0 6px;
@@ -45,26 +60,86 @@
             margin-bottom: 6px;
             height: 30rem;
 
-            @include tablet{
+            @include tablet {
                 height: fit-content;
+            }
+
+            @include desktop {
+                width: 100%;
+                display: inline-block;
+                grid-row: span 2 / auto;
+            }
+
+            &:nth-child(2) {
+                grid-area: 1 / 2 ;
+            }
+            &:nth-child(3) {
+                grid-area: 3 / 2 / 3 / 1 ;
+            }
+
+            &:nth-child(4) {
+                animation: designLabsSlide 1s linear;
+            }
+            &:nth-child(5) {
+                grid-area: 5 / 2 / 4 / 4;
+                grid-column: span 2 / auto; 
+            }
+            &:nth-child(7) {
+                grid-area: 5 / 2 / 9 / 2;
+            }
+            &:nth-child(8) {
+                grid-area: 7 / 1 / 9 / 2;
+            }
+
+            &:last-child{
+                grid-area: 8 / 2;
             }
 
             &--white {
                 height: 35rem;
 
-                @include tablet{
+                @include tablet {
                     height: fit-content;
+                }
+                @include desktop {
+                    width: 100%;
+                    grid-column: span 2 / auto;
                 }
 
                 & p {
-                    @include tablet{
-                        font-size: 26px;  
+                    @include tablet {
+                        font-size: 26px;
                         width: 75%;
-                        padding: 1.5rem 0 1rem 0;  
+                        padding: 1.5rem 0 1rem 0;
+                    }
+
+                    @include desktop {
+                        font-size: 2.125rem;
+                        width: 50%;
                     }
                 }
 
                 &-fortnite {
+                    @include desktop {
+                        display: inline-flex;
+                    }
+
+                    & img {
+                        @include desktop {
+                            width: 50%;
+                            order: 2;
+                        }
+                    }
+
+                    & div {
+                        order: 1;
+                        position: static;
+
+                        & h2 {
+                            font-size: 1.25rem;
+                        }
+                    }
+
                     & button {
                         color: $primary-three;
 
@@ -76,21 +151,37 @@
                     }
 
                     & h2 {
-                        @include tablet{
+                        @include tablet {
                             font-size: 2.25rem;
                         }
                     }
 
                     & p {
-                        @include tablet{
-                            font-size: 1.25rem;   
+                        @include tablet {
+                            font-size: 1.25rem;
                         }
                     }
                 }
             }
 
+            &--green {
+                @include desktop {
+                    display: inline-flex;
+                    height: 22rem;
+                }
+
+                & img {
+                    width: 50%;
+                    height: 100%;
+                }
+            }
+
             &-image {
                 width: 100%;
+
+                @include desktop {
+                    order: 1;
+                }
             }
 
             &-text {
@@ -106,7 +197,7 @@
                 justify-content: center;
                 align-items: flex-start;
 
-                @include tablet{
+                @include tablet {
                     padding-left: 1rem;
                     padding-top: 0;
                     padding: 0 0 6rem 1rem;
@@ -116,21 +207,21 @@
                 p {
                     padding-left: 6px;
 
-                    @include tablet{
-                     margin-left: 1rem;
+                    @include tablet {
+                        margin-left: 1rem;
                     }
                 }
 
                 & button {
-                    @include tablet{
-                        padding-left: 0;       
+                    @include tablet {
+                        padding-left: 0;
                     }
                 }
 
                 &--grey {
                     background-color: #2e2e2e;
 
-                    @include tablet{
+                    @include tablet {
                         background: none;
                     }
 
@@ -149,7 +240,7 @@
                     background-color: $primary-two;
                     height: 17.25rem;
 
-                    @include tablet{
+                    @include tablet {
                         position: relative;
                         width: 100%;
                         padding: 2rem 1rem;
@@ -157,19 +248,38 @@
                         bottom: 3px;
                     }
 
+                    @include desktop {
+                        height: 100%;
+                        position: static;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        justify-content: center;
+                    }
+
                     & h2 {
                         margin-bottom: 0.5rem;
                         margin-top: 0;
 
-                        @include tablet{
+                        @include tablet {
                             font-size: 2.13rem;
+                        }
+
+                        @include desktop {
+                            font-size: 1.25rem;
                         }
                     }
 
-                    & p{
-                        @include tablet{
+                    & p {
+                        @include tablet {
                             font-size: 1.25rem;
                             padding-right: 1rem;
+                        }
+                    }
+
+                    &-two {
+                        @include desktop {
+                            order: 2;
                         }
                     }
                 }
@@ -180,7 +290,7 @@
                     padding-top: 8rem;
                     height: 25rem;
 
-                    @include tablet{
+                    @include tablet {
                         position: relative;
                         width: 100%;
                         padding: 2rem 1rem;
@@ -189,16 +299,29 @@
                         padding-top: 3rem;
                     }
 
+                    @include desktop {
+                        position: absolute;
+                        width: fit-content;
+                        bottom: 4rem;
+                        left: 6rem;
+                    }
+
                     &--title {
                         font-size: 3rem;
                         margin: 0;
                         width: 16rem;
                         line-height: 3rem;
 
-                        @include tablet{
-                         font-size: 3.875rem;   
-                         width: fit-content;
-                         margin-bottom: .5rem;
+                        @include tablet {
+                            font-size: 3.875rem;
+                            width: fit-content;
+                            margin-bottom: 0.5rem;
+                        }
+
+                        @include desktop {
+                            font-size: 3.75rem;
+                            width: 20rem;
+                            line-height: 3.5rem;
                         }
                     }
 
@@ -211,8 +334,8 @@
                         margin-left: 0.75rem;
                         color: $secondary-two;
 
-                        @include tablet{
-                            padding-left: .5rem;
+                        @include tablet {
+                            padding-left: 0.5rem;
                             font-size: 1px;
                             margin-left: 1.75rem;
                         }
@@ -243,12 +366,19 @@
             &--p2 {
                 margin: 0;
             }
-            
-            &:last-child{
+
+            &:last-child {
                 margin-bottom: 0;
             }
         }
-        
-    }
 
+        &--desktop {
+            display: none;
+
+            @include desktop {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(50%, 2fr));
+            }
+        }
+    }
 }
