--- a/src/components/PageFooter/PageFooter.scss
+++ b/src/components/PageFooter/PageFooter.scss
@@ -1,4 +1,5 @@
 @use '../../partials/variables' as *;
+@use '../../partials/mixins' as *;
 
 .footer{
     background-color: #f2f2f2;
@@ -8,8 +9,18 @@
 
     &__nav{
 
+        @include tablet{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-bottom: 1rem;
+        }
+
         &-group{
 
+            @include tablet{
+                margin-right: 7rem;
+            }
         }
     }
 
@@ -19,6 +30,11 @@
             display: flex;
             flex-wrap: wrap;
             width: 85%;
+
+            @include tablet{
+                width: 110%;
+                margin-bottom: 2rem;
+            }
         }
 
         & span {
@@ -27,6 +43,10 @@
             font-size: 11px;
             margin-right: 1rem;
             margin-bottom: .25rem;
+
+            @include tablet{
+                margin-right: 2rem;
+            }
         }
     }
 
