--- a/src/components/PageContent/PageContent.scss
+++ b/src/components/PageContent/PageContent.scss
@@ -68,38 +68,39 @@
                 width: 100%;
                 display: inline-block;
                 grid-row: span 2 / auto;
+                
+                &:nth-child(2) {
+                    grid-area: 1 / 2 ;
+                }
+                &:nth-child(3) {
+                    grid-area: 3 / 2 / 3 / 1 ;
+                }
+    
+                &:nth-child(4) {
+                    grid-area: 2 / 2 / 4 / 2;
+                    animation: cardSlide 1.5s ease-in-out;
+                    animation-fill-mode: forwards;
+                }
+                &:nth-child(5) {
+                    grid-area: 5 / 2 / 4 / 4;
+                    grid-column: span 2 / auto; 
+                    animation: cardSlideTwo 1.5s ease-in-out;
+                    animation-fill-mode: forwards;
+                }
+                &:nth-child(7) {
+                    animation: cardSlide 1.5s ease-in-out;
+                    animation-fill-mode: forwards;
+                    grid-area: 5 / 2 / 9 / 2;
+                }
+                &:nth-child(8) {
+                    grid-area: 7 / 1 / 9 / 2;
+                }
+    
+                &:last-child{
+                    grid-area: 8 / 2;
+                }
             }
 
-            &:nth-child(2) {
-                grid-area: 1 / 2 ;
-            }
-            &:nth-child(3) {
-                grid-area: 3 / 2 / 3 / 1 ;
-            }
-
-            &:nth-child(4) {
-                grid-area: 2 / 2 / 4 / 2;
-                animation: cardSlide 1.5s ease-in-out;
-                animation-fill-mode: forwards;
-            }
-            &:nth-child(5) {
-                grid-area: 5 / 2 / 4 / 4;
-                grid-column: span 2 / auto; 
-                animation: cardSlideTwo 1.5s ease-in-out;
-                animation-fill-mode: forwards;
-            }
-            &:nth-child(7) {
-                animation: cardSlide 1.5s ease-in-out;
-                animation-fill-mode: forwards;
-                grid-area: 5 / 2 / 9 / 2;
-            }
-            &:nth-child(8) {
-                grid-area: 7 / 1 / 9 / 2;
-            }
-
-            &:last-child{
-                grid-area: 8 / 2;
-            }
 
             &--white {
                 height: 35rem;
@@ -113,6 +114,7 @@
                 }
 
                 & p {
+                    width: 90%;
                     @include tablet {
                         font-size: 26px;
                         width: 75%;
@@ -126,8 +128,11 @@
                 }
 
                 &-fortnite {
+                    margin-bottom: 0;
+                    
                     @include desktop {
                         display: inline-flex;
+                        margin-bottom: 6px;
                     }
 
                     & img {
@@ -140,9 +145,31 @@
                     & div {
                         order: 1;
                         position: static;
+                        padding-top: 1rem;
+                        height: fit-content;
+
+                        @include desktop {
+                            padding: 0;
+                        }
 
                         & h2 {
-                            font-size: 1.25rem;
+                            font-size: 1.6rem;
+                            
+                            @include tablet{
+                                font-size: 2.125rem;
+                            }
+                        }
+
+                        & p {
+                            font-size: .98rem;
+
+                            @include tablet{
+                                font-size: 1.25rem;
+                            }
+                        }
+                        
+                        & div {
+                            margin-top: 0;
                         }
                     }
 
@@ -365,16 +392,15 @@
 
                 &-container {
                     margin-top: 1.5rem;
-                    margin-left: 1.5rem;
+
+                    @include tablet{
+                        margin-left: 1.5rem;
+                    }
                 }
             }
 
             &--p2 {
                 margin: 0;
-            }
-
-            &:last-child {
-                margin-bottom: 0;
             }
         }
 
