--- a/src/components/PageNav/PageNav.scss
+++ b/src/components/PageNav/PageNav.scss
@@ -1,28 +1,35 @@
-@use '../../partials/mixins' as *;
-@use '../../partials/variables' as *;
+@use "../../partials/mixins" as *;
+@use "../../partials/variables" as *;
 
-.header{
+.header {
     display: flex;
     align-items: center;
-    padding: 1rem .5rem;
+    padding: 1rem 0.5rem;
     width: 100%;
-    border-bottom: 1px solid rgba($color: #000000, $alpha: .1);
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
     background-color: $primary-one;
 
-    &__nav{
+    @include desktop {
+        display: none;
+    }
 
-        &-burger{
+    &__nav {
+        &-burger {
             width: 20px;
-            margin-left: .5rem;
+            margin-left: 0.5rem;
             margin-right: 2rem;
 
-            &--close{
+            &--close {
                 @extend .header__nav-burger;
                 width: 20px;
             }
+
+            @include desktop {
+                display: none;
+            }
         }
 
-        &-open{
+        &-open {
             height: fit-content;
             background-color: rgb(242, 242, 242);
             margin: 0;
@@ -33,15 +40,14 @@
             width: 100%;
         }
 
-        &-listitem{
+        &-listitem {
             list-style: none;
             padding: 1.5rem 1rem;
-            border-bottom: 1px solid rgba($color: #000000, $alpha: .1);
+            border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
         }
-
     }
 
-    &__actions{
+    &__actions {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -52,25 +58,93 @@
             color: $primary-three;
         }
 
-        &-aside{
+        &-aside {
             display: flex;
             align-items: center;
+
+            @include desktop {
+                order: 3;
+            }
+
+            &--all {
+                margin-right: 1rem;
+            }
+        }
+
+        &--extended {
+            order: 2;
+            display: flex;
+            align-items: center;
+            flex-grow: 1;
+
+            &-pipe {
+                margin: 0;
+                font-size: 1.5rem;
+                font-weight: 300;
+                margin: 0 2rem;
+                margin-right: 1rem;
+            }
+
+            &-logo {
+                width: 91px;
+            }
+
+            &-list {
+                display: flex;
+                align-items: flex-end;
+                margin-left: 2rem;
+
+
+                &item {
+                    margin-right: 2.5rem;
+                    font-size: .819rem;
+                }
+            }
         }
     }
 
-    &__search{
+    &__search {
         width: 20px;
         transform: rotateY(180deg);
+
+        @include desktop {
+            margin-right: 2rem;
+        }
     }
 
-    &__logo{
+    &__logo {
         width: 108px;
-        margin-left: .5rem;
+        margin-left: 0.5rem;
+
+        @include desktop {
+            order: 1;
+            width: 135px;
+        }
     }
 
-    &__cart{
+    &__cart {
         width: 22.5px;
         height: 19px;
         margin-right: 1rem;
+
+        @include desktop {
+            margin-right: 2rem;
+        }
+    }
+
+    &__signin {
+        width: 32px;
+    }
+
+    &--desktop {
+        display: none;
+        @include desktop {
+            display: flex;
+            align-items: center;
+            padding: 1rem 4rem;
+            width: 100%;
+            border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+            background-color: $primary-one;
+        }
     }
 }
