FINAL-TOUCH: slight clean up on mobile - tablet - desktop: font sizes and margin/padding

--- a/src/components/PageHero/PageHero.scss
+++ b/src/components/PageHero/PageHero.scss
@@ -84,7 +84,7 @@
         animation: textSlide 0.3s ease-out;
 
         @include desktop {
-            width: fit-content;
+            width: 35rem;
             align-items: flex-start;
             text-align: left;
             padding-left: 6rem;
@@ -100,6 +100,7 @@
 
             @include desktop {
                 margin-left: 0;
+                width: auto;
             }
         }
 
