--- a/src/components/PageContent/PageContent.scss
+++ b/src/components/PageContent/PageContent.scss
@@ -165,12 +165,19 @@
                             @include tablet{
                                 font-size: 2.125rem;
                             }
+                            @include desktop{
+                                font-size: 1.25rem;
+                            }
                         }
 
                         & p {
                             font-size: .98rem;
 
                             @include tablet{
+                                font-size: 1.25rem;
+                            }
+
+                            @include desktop{
                                 font-size: 1.25rem;
                             }
                         }
@@ -272,7 +279,11 @@
 
                     & p {
                         margin-bottom: 0;
-                        font-size: 1.25rem;
+                        font-size: 1rem;
+
+                        @include tablet{
+                            font-size: 1.25rem;
+                        }
                     }
                 }
 
