--- a/src/components/PageFooter/PageFooter.scss
+++ b/src/components/PageFooter/PageFooter.scss
@@ -7,6 +7,10 @@
     flex-direction: column;
     padding: 1rem;
 
+    @include tablet {
+        padding: 1rem 1.5rem;
+    }
+
     @include desktop {
         padding: 1rem 4rem;
     }
@@ -26,10 +30,26 @@
 
         &-group{
 
-            @include tablet{
-                margin-right: 7rem;
+            & h4 {
+                margin-bottom: 0;
+                margin-top: 3rem;
             }
 
+            &:first-child {
+
+                & h4 {
+                    margin-top: 1.5rem;
+                }
+            }
+
+            @include tablet{
+                margin-right: 7rem;
+
+                & h4 {
+                    margin-bottom: 0;
+                    margin-top: 1rem;
+                }
+            }
 
             @include desktop {
                 width: 12rem;
